--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -10,6 +10,7 @@
         <%- include('_footer'); %>
     </body>
 </html> -->
+<link rel="stylesheet" href="/css/user_profile.css">
 <h1>
         Codeial/profile
     </h1>
