linking mongodb using mongoose

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,15 +2,16 @@
     <head>
             
         <link rel="stylesheet" href="/css/layout.css">
+        <!-- extracting here the css part  of sub page -->
         <%- style %>
-        
-
+    
     </head>
     <body>
         <%- include('_header'); %>
         <%- body %>
         <%- include('_footer'); %>
-
+         
+         <!-- extracting here the js part  of sub page -->
         <%- script %>
     </body>
 </html>
