user sign up is done

--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -1,1 +1,11 @@
 <h1>SIGN IN</h1>
+<form action="" method="">
+    
+    <input name="email" type="email" placeholder="Your Email-id" required>
+    <input name="password" type="password" placeholder="Password" required>
+    <input type="submit" value="Sign In">
+ 
+ 
+ 
+ 
+ </form>
