--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -1,1 +1,9 @@
 <h1>SIGN UP</h1>
+<form action="/users/create" method="POST">
+   <input name="name" type="text" placeholder="Your Name" required>
+   <input name="email" type="email" placeholder="Your Email-id" required>
+   <input name="password" type="password" placeholder="Password" required>
+   <input name="confirm_password" type="password" placeholder="Confirm Password" required>
+   <input type="submit" value="Sign Up">
+
+</form>
