--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -13,4 +13,6 @@
 <link rel="stylesheet" href="/css/user_profile.css">
 <h1>
         Codeial/profile
-    </h1>
+</h1>
+<h2>email:<%= user.email %></h2>
+<h2>name:<%= user.name %></h2>
