--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -16,3 +16,6 @@
 </h1>
 <h2>email:<%= user.email %></h2>
 <h2>name:<%= user.name %></h2>
+<a href="/users/logout">
+<button type="submit" >sign out</button>
+</a>
