setting current authenticated user and passing user data to views and restricting page acess

--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -14,3 +14,6 @@
 <h1>
         Codeial/profile
     </h1>
+    <h1><%= user.name%></h1>
+    <h1><%= user.email%></h1>
+    <!-- <h1><%= user.password%></h1> -->
