setting up mongo store for session cookie and added comments to previous commit

--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,19 +1,9 @@
-<!-- <html>
-    <head>
 
-    </head>
-    <body>
-        <%- include('_header'); %>
-        <h1>
-            Codeial/profile
-        </h1>
-        <%- include('_footer'); %>
-    </body>
-</html> -->
 <link rel="stylesheet" href="/css/user_profile.css">
 <h1>
         Codeial/profile
     </h1>
+    <!-- user is here accessible bcoz of user.locals.user=req.user -->
     <h1><%= user.name%></h1>
     <h1><%= user.email%></h1>
     <!-- <h1><%= user.password%></h1> -->
