setting up SCSS correctly and using SCSS

--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,3 +1,6 @@
-<footer>
-    page footer
+
+<footer id="footer">
+    <div id="footer-content">
+    © Coding Ninjas. All Rights Resesrved.
+    </div>
 </footer>
