--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,7 +15,8 @@
 
     </body>
 </html> -->
-<h1>
+<link rel="stylesheet" href="/css/home.css">
+<h1 id="main-heading">
         Codeial Web App
         <%= title%>
-    </h1>
+ </h1>
