added post schema

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -20,3 +20,12 @@
         Codeial Web App
         <%= title%>
  </h1>
+ <section id="feed-posts">
+     <h3>Posts</h3>
+ <form action="" id="new-post-form" method="POST">
+     <textarea name="content" cols="30" rows="3" placeholder="What's on your mind..??"></textarea>
+     <input type="submit" value="Post">
+
+
+ </form>
+ </section>
