--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -4,6 +4,6 @@
         Codeial/profile
     </h1>
     <!-- user is here accessible bcoz of user.locals.user=req.user -->
-    <h1><%= user.name%></h1>
-    <h1><%= user.email%></h1>
+    <h1> Name : <%= user.name%></h1>
+    <h1> Email : <%= user.email%></h1>
     <!-- <h1><%= user.password%></h1> -->
