--- a/views/home.ejs
+++ b/views/home.ejs
@@ -22,7 +22,7 @@
  </h1>
  <section id="feed-posts">
      <h3>Posts</h3>
- <form action="" id="new-post-form" method="POST">
+ <form action="/posts/create" id="new-post-form" method="POST">
      <textarea name="content" cols="30" rows="3" placeholder="What's on your mind..??"></textarea>
      <input type="submit" value="Post">
 
