--- a/views/home.ejs
+++ b/views/home.ejs
@@ -22,12 +22,16 @@
  </h1>
  <section id="feed-posts">
      <h3>Posts</h3>
- <form action="/posts/create" id="new-post-form" method="POST">
-     <textarea name="content" cols="30" rows="3" placeholder="What's on your mind..??"></textarea>
-     <input type="submit" value="Post">
+     <!-- if condition is added for authentication purpose -->
+     <!-- one can't see the form if he is not logged in -->
+     <% if(locals.user){ %>
+     <form action="/posts/create" id="new-post-form" method="POST">
+       <textarea name="content" cols="30" rows="3" placeholder="What's on your mind..??"></textarea>
+       <input type="submit" value="Post">
 
 
- </form>
+    </form>
+    <% } %>
  <div id="posts-list-container">
      <ul>
  <% for(var i of posts ){ %>
@@ -35,6 +39,7 @@
             <!-- here user is the field in post schema and 
             name is one of its property.  -->
             <p><%= i.user.name %></p>
+            <!-- <p><%= i.user.createdAt %></p> -->
             <p><%= i.content %></p>
             
         </li>
