--- a/views/home.ejs
+++ b/views/home.ejs
@@ -26,7 +26,7 @@
      <!-- one can't see the form if he is not logged in -->
      <% if(locals.user){ %>
      <form action="/posts/create" id="new-post-form" method="POST">
-       <textarea name="content" cols="30" rows="3" placeholder="What's on your mind..??"></textarea>
+       <textarea name="content" cols="30" rows="3" placeholder="What's on your mind..??" required></textarea>
        <input type="submit" value="Post">
 
 
@@ -34,26 +34,43 @@
     <% } %>
  <div id="posts-list-container">
      <ul>
- <% for(var i of posts ){ %>
+ <% for(var post of posts ){ %>
         <li>
             <!-- here user is the field in post schema and 
             name is one of its property.  -->
-            <p><%= i.user.name %></p>
-            <!-- <p><%= i.user.createdAt %></p> -->
-            <p><%= i.content %></p>
-            <div id="post-comments">
+            <!-- here post is the iterating variable -->
+            <p><%= post.user.name %></p>
+           
+            <p><%= post.content %></p>
+            <div class="post-comments">
+                
                 <!-- if condition is added for authentication purpose -->
                 <% if(locals.user){ %>
 
                 <form action="/comments/create" method="POST">
-                    <input type="text" name="content" placeholder="Type here to add a comment...">
-                    <!--  sending the id of the post below which comment needs to be added -->
-                    <input type="hidden" name="post" value="<%= i._id %>">
+                    <input type="text" name="content" placeholder="Type here to add a comment..." required>
+                       <!-- sending the id of the post below which comment needs to be added -->
+                    <input type="hidden" name="post" value="<%= post._id %>">
                     <input type="submit" value="Add Comment">
 
                 </form>
 
                 <% } %>
+                <div class="post-comments-list">
+                    <ul id="post-comments-<%= post._id%>">
+                        <!-- here post is the iterating  varible in the above for loop-->
+                        <% for(var comment of post.comments) { %>
+                            <p>
+                                <small>
+                                    <%= comment.user.name %>
+                                </small>
+                                <div>
+                                    <%= comment.content %>
+                                </div>
+                            </p>
+                        <% } %>
+                    </ul>
+                </div>
             </div>
             
         </li>
