--- a/views/home.ejs
+++ b/views/home.ejs
@@ -19,64 +19,9 @@
     <% } %>
  <div id="posts-list-container">
      <ul>
- <% for(var post of posts ){ %>
-        <li>
-            <!-- here user is the field in post schema and 
-            name is one of its property.  -->
-            <!-- here post is the iterating variable -->
-            <p><%= post.user.name %></p>
-           
-            <p><%= post.content %>
+ <% for( post of posts ){ %>
 
-            <!--checking if current logged in user id with the user id who created the post-->
-            <%  if( locals.user && locals.user.id == post.user.id){ %>
-            <a href="/posts/destroy/<%= post._id %>">x</a>
-            
-            <%  }  %>
-            </p>
-
-            <div class="post-comments">
-                
-                <!-- if condition is added for authentication purpose -->
-                <% if(locals.user){ %>
-
-                <form action="/comments/create" method="POST">
-                    <input type="text" name="content" placeholder="Type here to add a comment..." required>
-                       <!-- sending the id of the post below which comment needs to be added -->
-                    <input type="hidden" name="post" value="<%= post._id %>">
-                    <input type="submit" value="Add Comment">
-
-                </form>
-
-                <% } %>
-                <div class="post-comments-list">
-                    <ul id="post-comments-<%= post._id%>">
-                        <!-- here post is the iterating  varible in the above for loop-->
-                        <% for(var comment of post.comments) { %>
-                            <li>
-                            <p>
-                                <small>
-                                    
-                                    <%= comment.user.name %>
-                                </small>
-                                <div>
-                                    <%= comment.content %>
-                                </div>
-                                <div>
-                                    <% if(locals.user && ((locals.user.id == comment.user.id )||( locals.user.id == post.user.id))){ %>
-                                        <a href="/comments/destroy/<%= comment._id %>">x</a>
-                                        
-
-                                    <% } %>
-
-                                </div>
-                            </p>
-                            </li>
-                        <% } %>
-                    </ul>
-                </div>
-            </div>
-        </li>
+    <%- include('_post'); %>
 <% }  %>
      </ul>
  </div>
