--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -3,7 +3,17 @@
 <h1>
         Codeial/profile
     </h1>
-    <!-- user is here accessible bcoz of user.locals.user=req.user -->
-    <h1> Name : <%= profile_user.name%></h1>
-    <h1> Email : <%= profile_user.email%></h1>
-    <!-- <h1><%= user.password%></h1> -->
+      <!-- locals.user contains current logged in user  -->
+     <!-- user is here accessible bcoz of user.locals.user=req.user -->
+    <%  if(user.id==profile_user.id){  %>
+         <!-- if user matches then show the form -->
+        <form action="/users/update/<%= profile_user._id%>" method="POST">
+            <input type="text" name="name" placeholder="Enter name" value="<%= profile_user.name %>" required>
+            <input type="email" name="email" placeholder="Enter email" value="<%= profile_user.email %>" required>
+            <input type="submit" value="Update">
+        </form>
+    <%  }else{ %>
+        <!-- else show only the profile info -->
+        <h1> Name : <%= profile_user.name%></h1>
+        <h1> Email : <%= profile_user.email%></h1>
+    <% } %>
