Improved SCSS of Home Page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,10 +1,7 @@
 
 <link rel="stylesheet" href="/css/home.css">
 
-<h1 id="main-heading">
-        Codeial Web App
-        <%= title%>
- </h1>
+<div id="home-container">
  <section id="feed-posts">
      <h3>Posts</h3>
      <!-- if condition is added for authentication purpose -->
@@ -40,3 +37,4 @@
 
    <% } %>
  </section>
+ </div>
