--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,2 +1,9 @@
-#main-heading {
-  color: salmon; }
+#home-container {
+  display: flex; }
+  #home-container #feed-posts {
+    width: 70%;
+    padding: 10px; }
+  #home-container #user-friends {
+    width: 30%;
+    border-left: 1px solid lightgray;
+    padding: 10px; }
