--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -1,3 +1,17 @@
-#main-heading{
-    color:salmon;
+// #main-heading{
+//     color:salmon;
+// }
+#home-container{
+    display: flex;
+    #feed-posts{
+        width: 70%;
+        padding: 10px;
+
+    }
+    #user-friends{
+        width: 30%;
+        border-left: 1px solid lightgray;
+        padding: 10px;
+        // height: 100%;
+    }
 }
