Creating Flash Messages

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,6 +10,16 @@
     </head>
     <body>
         <%- include('_header'); %>
+        <!-- displaying flash message -->
+        <% if(flash.success && flash.success.length>0){ %>
+            <h5> 
+            
+            <%= flash.success%>
+
+
+            </h5>
+        <% } %>
+
         <main id="layout-main">
             <%- body %>
         </main>
