Introducing Noty and Added Flash messages to all actions

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,6 +1,7 @@
 <html>
     <head>
-            
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
         <link rel="stylesheet" href="/css/layout.css">
         <link rel="stylesheet" href="/css/header.css">
         <link rel="stylesheet" href="/css/footer.css">
@@ -10,15 +11,8 @@
     </head>
     <body>
         <%- include('_header'); %>
-        <!-- displaying flash message -->
-        <% if(flash.success && flash.success.length>0){ %>
-            <h5> 
-            
-            <%= flash.success%>
-
-
-            </h5>
-        <% } %>
+        
+        
 
         <main id="layout-main">
             <%- body %>
@@ -28,5 +22,31 @@
          
          <!-- extracting here the js part  of sub page -->
         <%- script %>
+        <script>
+            <% if ( flash.success && flash.success.length>0 ){ %> 
+
+            new Noty({
+                theme:'relax',
+                text: '<%= flash.success%>',
+                type:'success',
+                layout:'topRight',
+                timeout:1500
+                
+            }).show();
+
+        <% } %>
+
+        <% if ( flash.error && flash.error.length >0 ){ %>
+            new Noty({
+                theme:'relax',
+                text:'<%= flash.error%>',
+                type:'error',
+                layout:'topRight',
+            
+                timeout:1500
+            }).show();
+        <% } %>
+         
+        </script>
     </body>
 </html>
