--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -20,7 +20,7 @@
         <!-- if condition is added for authentication purpose -->
         <% if(locals.user){ %>
 
-        <form action="/comments/create" method="POST">
+        <form action="/comments/create" id="new-comment-form" method="POST">
             <input type="text" name="content" placeholder="Type here to add a comment..." required>
                <!-- sending the id of the post below which comment needs to be added -->
             <input type="hidden" name="post" value="<%= post._id %>">
