--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -7,9 +7,11 @@
      <!-- user is here accessible bcoz of user.locals.user=req.user -->
     <%  if(user.id==profile_user.id){  %>
          <!-- if user matches then show the form -->
-        <form action="/users/update/<%= profile_user._id%>" method="POST">
+        <form action="/users/update/<%= profile_user._id%>" enctype="multipart/form-data" method="POST">
             <input type="text" name="name" placeholder="Enter name" value="<%= profile_user.name %>" required>
+           
             <input type="email" name="email" placeholder="Enter email" value="<%= profile_user.email %>" required>
+            <input type="file" name="avatar" placeholder="Profile Picture">
             <input type="submit" value="Update">
         </form>
     <%  }else{ %>
