Edge case : Replacing The Avatar if user updates his avatar

--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,9 +1,10 @@
 
 <link rel="stylesheet" href="/css/user_profile.css">
-<img src="<%= user.avatar %>" alt="<%= user.name %>" width="200" height="200">
+
       <!-- locals.user contains current logged in user  -->
      <!-- user is here accessible bcoz of user.locals.user=req.user -->
     <%  if(user.id==profile_user.id){  %>
+        <img src="<%= user.avatar %>" alt="<%= user.name %>" width="200" height="200">
          <!-- if user matches then show the form -->
         <form action="/users/update/<%= profile_user._id%>" enctype="multipart/form-data" method="POST">
             <input type="text" name="name" placeholder="Enter name" value="<%= profile_user.name %>" required>
@@ -14,6 +15,7 @@
         </form>
     <%  }else{ %>
         <!-- else show only the profile info -->
+        <img src="<%= profile_user.avatar %>" alt="<%= profile_user.name %>" width="200" height="200">
         <h1> Name : <%= profile_user.name%></h1>
         <h1> Email : <%= profile_user.email%></h1>
     <% } %>
