like on posts and comments

--- a/views/_comment.ejs
+++ b/views/_comment.ejs
@@ -8,13 +8,24 @@
         </small>
         <div>
             <%= comment.content %>
+           
+            
         </div>
+        <small>
+        <% if(locals.user){ %>
+            <a class="toggle-like-button" data-likes="<%= comment.likes.length %>" href="/likes/toggle/?id=<%=comment._id %>&type=Comment">
+                <%= comment.likes.length %> likes
+            </a>
+        <% }else{ %>
+            <%= comment.likes.length %> likes
+        <% } %>
+        </small> 
         <div>
             <% if(locals.user && ((locals.user.id == comment.user.id )||( locals.user.id == post.user.id))){ %>
                 <a class="delete-comment-button" href="/comments/destroy/<%= comment._id %>">x</a>
+  
                 
-
-            <% } %>
+           <% } %>
 
         </div>
     </p>
