--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -7,12 +7,22 @@
     <p><%= post.user.name %></p>
    
     <p><%= post.content %>
+    <small>
+    <% if(locals.user){ %>
+        <a class="toggle-like-button"  data-likes="<%= post.likes.length %>"  href="/likes/toggle/?id=<%= post._id %>&type=Post"><%= post.likes.length %> likes</a>
+    <% }else{ %>
+        <%= post.likes.length %> likes
+    <% } %>
+    </small>
+        
+       
 
     <!--checking if current logged in user id with the user id who created the post-->
     <%  if( locals.user && locals.user.id == post.user.id){ %>
     <a class="delete-post-button" href="/posts/destroy/<%= post._id %>">x</a>
+   
     
-    <%  }  %>
+    <%  } %>
     </p>
 
     <div class="post-comments">
