--- a/views/home.ejs
+++ b/views/home.ejs
@@ -40,3 +40,4 @@
  </div>
  <script src="/js/home_comments.js"></script>
 <script src="/js/home_posts.js"></script>
+<script src="/js/toggle_likes.js"></script>
