basic design of chatbox is ready and add some changes in likes of comments

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,6 @@
 
 <link rel="stylesheet" href="/css/home.css">
+<link rel="stylesheet" href="/css/chat_box.css">
 
 <div id="home-container">
  <section id="feed-posts">
@@ -37,7 +38,10 @@
 
    <% } %>
  </section>
+ <%- include('_chat_box'); %>
  </div>
  <script src="/js/home_comments.js"></script>
+
 <script src="/js/home_posts.js"></script>
 <script src="/js/toggle_likes.js"></script>
+
