--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -30,12 +30,11 @@
         <!-- if condition is added for authentication purpose -->
         <% if(locals.user){ %>
 
-        <form action="/comments/create" id="new-comment-form" method="POST">
+        <form action="/comments/create" id="post-<%= post._id %>-comments-form" method="POST">
             <input type="text" name="content" placeholder="Type here to add a comment..." required>
                <!-- sending the id of the post below which comment needs to be added -->
             <input type="hidden" name="post" value="<%= post._id %>">
             <input type="submit" value="Add Comment">
-
         </form>
 
         <% } %>
