setting up socket.io

--- a/views/_chat_box.ejs
+++ b/views/_chat_box.ejs
@@ -10,6 +10,12 @@
             <li class="self-message">
                 <span>self message1</span>
                 <span>self message2</span>
+                <span>self message2</span>
+                <span>self message2</span>
+                <span>self message2</span>
+                <span>self message2</span>
+                <span>self message2</span>
+                <span>self message2</span>
             </li>
         </ul>
         <div id="chat-message-input-container">
