--- a/views/home.ejs
+++ b/views/home.ejs
@@ -44,4 +44,5 @@
 
 <script src="/js/home_posts.js"></script>
 <script src="/js/toggle_likes.js"></script>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
+<script src="/js/chat_engine.js"></script>
