--- a/views/home.ejs
+++ b/views/home.ejs
@@ -42,7 +42,13 @@
  </div>
  <script src="/js/home_comments.js"></script>
 
+
 <script src="/js/home_posts.js"></script>
 <script src="/js/toggle_likes.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
 <script src="/js/chat_engine.js"></script>
+<% if(locals.user) { %>
+<script>
+    new chatEngine('user-chat-box','<%= locals.user.email %>')
+</script>
+<% } %>
