--- a/views/_chat_box.ejs
+++ b/views/_chat_box.ejs
@@ -1,18 +1,16 @@
 <!-- Create the code for chatbox -->
 <% if(locals.user){ %>
     <div id="user-chat-box">
+        <div id="feedback"></div>
         <ul id="chat-messages-list">
             <li class="other-message">
-                <span>other message1</span>
-                <span>other message2</span>
+                
+                
 
             </li>
             <li class="self-message">
-                <span>self message1</span>
-                <span>self message2</span>
-                <span>self message2</span>
-                <span>self message2</span>
-                <span>self message2</span>
+                
+                
                 
             </li>
         </ul>
