--- a/assets/css/chat_box.css
+++ b/assets/css/chat_box.css
@@ -8,6 +8,8 @@
   background-color: white;
   padding: 5px;
   box-shadow: 1px 1px 2px 1px grey; }
+  #user-chat-box #feedback {
+    font-size: 15px; }
   #user-chat-box #chat-messages-list {
     list-style: none;
     height: 70%;
@@ -22,6 +24,8 @@
         padding: 10px;
         border: 1px solid grey;
         background-color: lightblue; }
+      #user-chat-box #chat-messages-list .other-message sub {
+        font-size: 15px; }
     #user-chat-box #chat-messages-list .self-message {
       text-align: right;
       padding: 5px; }
@@ -30,6 +34,8 @@
         padding: 10px;
         border: 1px solid grey;
         background-color: lightgreen; }
+      #user-chat-box #chat-messages-list .self-message sub {
+        font-size: 15px; }
   #user-chat-box #chat-message-input-container {
     height: 24%;
     width: 100%;
