view helpers and minified css files properly

--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,5 +1,6 @@
 
-<link rel="stylesheet" href="/css/user_profile.css">
+
+<link rel="stylesheet" href="<%= assetPath('css/user_profile.css') %>">
 
       <!-- locals.user contains current logged in user  -->
      <!-- user is here accessible bcoz of user.locals.user=req.user -->
