--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,8 @@
 
-<link rel="stylesheet" href="/css/home.css">
-<link rel="stylesheet" href="/css/chat_box.css">
+
+<link rel="stylesheet" href="<%= assetPath('css/home.css') %>">
+
+<link rel="stylesheet" href="<%= assetPath('css/chat_box.css') %>">
 
 <div id="home-container">
  <section id="feed-posts">
@@ -40,13 +42,17 @@
  </section>
  <%- include('_chat_box'); %>
  </div>
- <script src="/js/home_comments.js"></script>
+
+ <script src="<%= assetPath('js/home_comments.js') %>"></script>
 
 
-<script src="/js/home_posts.js"></script>
-<script src="/js/toggle_likes.js"></script>
+
+<script src="<%= assetPath('js/home_posts.js') %>"></script>
+
+<script src="<%= assetPath('js/toggle_likes.js') %>"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
-<script src="/js/chat_engine.js"></script>
+
+<script src="<%= assetPath('js/chat_engine.js') %>"></script>
 <% if(locals.user) { %>
 <script>
     new chatEngine('user-chat-box','<%= locals.user.email %>')
