styling of sign up page

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,5 +1,5 @@
 #header {
-  background-color: blue;
+  background-color: #4834c9;
   height: 7vh;
   display: flex;
   justify-content: space-between; }
