styling sign in page

--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,6 +1,6 @@
 
 <footer id="footer">
     <div id="footer-content">
-    © Coding Ninjas. All Rights Resesrved.
+    © Codeial. All Rights Resesrved.
     </div>
 </footer>
