--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -1,6 +1,9 @@
+<link rel="stylesheet" href="<%= assetPath('css/user_sign_in.css') %>">
+<div id="sign-in-page">
+
 <h1>SIGN IN</h1>
-<p>
-    <a href="/users/auth/google">Google Sign In/Sign Up</a>
+<p id="google-sign-in">
+    <a href="/users/auth/google"><img src="/images/google.png" height="30" width="30"><span> Continue with Google</span></a>
 </p>
 <form action="/users/create-session" method="POST">
     
@@ -9,6 +12,11 @@
     <input type="submit" value="Sign In">
 
  </form>
-
+ 
+<p id="already-account">
+   <span>Don't have an account?</span> 
+   <a href="/users/sign-up">Sign Up</a>
+<p>
+</div>
  
  
