--- a/assets/scss/user_sign_up.scss
+++ b/assets/scss/user_sign_up.scss
@@ -1,21 +1,50 @@
+
+body{
+    background-image:url("/images/cover-photo-blur.png");
+    background-size: cover;
 #sign-up-page{
-
-
-    h1{
-        font-family: sans-serif;
-        // font-weight: 10rem;
-    }
+    // margin-bottom:1rem;
     form{
-        background-color: black;
-        height: 22rem;
+        background-color: white;
+        height: 26rem;
         width: 18rem;
-        // margin-left: 24rem;
+        
         border-radius:3%;
         margin:auto;
+        h2{
+            font-family:arial;
+            font-weight: bold;
+        }
+        //google-sign-up
+        #google-sign-up{
+            height: 2rem;
+          
+            width: 15rem;
+            background-color:white;
+            // background-color: red;
+            // box-shadow: 0px 0px 6px 4px rgba(230,196,196,0.7); 
+            border-style:outset;
+            margin-left: 1.5rem;
+            a{
+                text-decoration:none;
+                color: black;
+                font-size: bold;
+                font-family:sans-serif;
+                font-size:0.9rem;
+                
+                span{
+                    position:relative;
+                    top:-0.4rem;
+                }
+                
+                
+            }
+    
+        }
 
         input{
             display: inline-block;
-            margin-top: 1.5rem;
+            margin-top: 0.5rem;
             // border-radius:3%;
             width: 15rem;
             padding: 0.8rem;
@@ -36,41 +65,27 @@
             border:none;
             
         }
-    }
-    #google-sign-up{
-        height: 2rem;
-        width: 15rem;
-        // background-color: red;
-        // box-shadow: 0px 0px 6px 4px rgba(230,196,196,0.7); 
-        border-style:outset;
-        margin-left: 26rem;
-        a{
-            text-decoration:none;
-            color: black;
-            font-size: bold;
-            font-family:sans-serif;
-            font-size:0.9rem;
-            
+        #already-account{
+            height: 2rem;
+            width: 15rem;
+            // background-color: white;
+            // box-shadow: 0px 0px 6px 4px rgba(230,196,196,0.7); 
+            // border-style:outset;
+            margin-left:1rem;
             span{
-                position:relative;
-                top:-0.4rem;
+                color:black;
             }
-            
-            
+            a{
+                text-decoration:none;
+                color:#3449eb;
+                
+            }
         }
+    }
+    
+    
+   
 
-    }
-    #already-account{
-        height: 2rem;
-        width: 15rem;
-        // background-color: red;
-        // box-shadow: 0px 0px 6px 4px rgba(230,196,196,0.7); 
-        // border-style:outset;
-        margin-left: 26rem;
-        a{
-            text-decoration:none;
-            color:#3449eb;
-            
-        }
-    }
+
+}
 }
