--- a/assets/css/user_sign_in.css
+++ b/assets/css/user_sign_in.css
@@ -1,46 +1,47 @@
-#sign-in-page h1 {
-  font-family: sans-serif; }
-
-#sign-in-page form {
-  background-color: black;
-  height: 14rem;
-  width: 18rem;
-  border-radius: 3%;
-  margin: auto; }
-  #sign-in-page form input {
-    display: inline-block;
-    margin-top: 1.5rem;
-    width: 15rem;
-    padding: 0.8rem;
-    font-size: 0.7rem;
-    font-family: sans-serif; }
-  #sign-in-page form input[type="submit"] {
-    background-color: #4834c9;
-    color: white;
-    font-size: 1rem;
-    outline: none;
-    cursor: pointer;
-    border: none; }
-
-#sign-in-page #google-sign-in {
-  height: 2rem;
-  width: 15rem;
-  border-style: outset;
-  margin-left: 26rem; }
-  #sign-in-page #google-sign-in a {
-    text-decoration: none;
-    color: black;
-    font-size: bold;
-    font-family: sans-serif;
-    font-size: 0.9rem; }
-    #sign-in-page #google-sign-in a span {
-      position: relative;
-      top: -0.4rem; }
-
-#sign-in-page #already-account {
-  height: 2rem;
-  width: 15rem;
-  margin-left: 26rem; }
-  #sign-in-page #already-account a {
-    text-decoration: none;
-    color: #3449eb; }
+body {
+  background-image: url("/images/cover-photo-blur.png");
+  background-size: cover; }
+  body #sign-in-page form {
+    background-color: white;
+    height: 20rem;
+    width: 18rem;
+    border-radius: 3%;
+    margin: auto; }
+    body #sign-in-page form h2 {
+      font-family: arial;
+      font-weight: bold; }
+    body #sign-in-page form #google-sign-in {
+      height: 2rem;
+      width: 15rem;
+      border-style: outset;
+      margin-left: 1.5rem; }
+      body #sign-in-page form #google-sign-in a {
+        text-decoration: none;
+        color: black;
+        font-size: bold;
+        font-family: sans-serif;
+        font-size: 0.9rem; }
+        body #sign-in-page form #google-sign-in a span {
+          position: relative;
+          top: -0.4rem; }
+    body #sign-in-page form input {
+      display: inline-block;
+      margin-top: 0.5rem;
+      width: 15rem;
+      padding: 0.8rem;
+      font-size: 0.7rem;
+      font-family: sans-serif; }
+    body #sign-in-page form input[type="submit"] {
+      background-color: #4834c9;
+      color: white;
+      font-size: 1rem;
+      outline: none;
+      cursor: pointer;
+      border: none; }
+    body #sign-in-page form #already-account {
+      height: 2rem;
+      width: 15rem;
+      margin-left: 1rem; }
+      body #sign-in-page form #already-account a {
+        text-decoration: none;
+        color: #3449eb; }
