--- a/assets/scss/user_sign_in.scss
+++ b/assets/scss/user_sign_in.scss
@@ -1,19 +1,45 @@
+body{
+    background-image:url("/images/cover-photo-blur.png");
+    background-size: cover;
 #sign-in-page{
-    h1{
-        font-family: sans-serif;
-        // font-weight: 10rem;
-    }
+   
     form{
-        background-color: black;
-        height: 14rem;
+        background-color:white;
+        height: 20rem;
         width: 18rem;
         // margin-left: 24rem;
         border-radius:3%;
         margin:auto;
+        h2{
+            font-family: arial;
+            font-weight: bold;
+        }
+    #google-sign-in{
+        height: 2rem;
+        width: 15rem;
+        // background-color: red;
+        // box-shadow: 0px 0px 6px 4px rgba(230,196,196,0.7); 
+        border-style:outset;
+        margin-left: 1.5rem;
+        a{
+            text-decoration:none;
+            color: black;
+            font-size: bold;
+            font-family:sans-serif;
+            font-size:0.9rem;
+            
+            span{
+                position:relative;
+                top:-0.4rem;
+            }
+            
+            
+        }
+    }
 
         input{
             display: inline-block;
-            margin-top: 1.5rem;
+            margin-top: 0.5rem;
             // border-radius:3%;
             width: 15rem;
             padding: 0.8rem;
@@ -34,45 +60,25 @@
             border:none;
             
         }
-    }
-
-
-
-
-    
-    #google-sign-in{
-        height: 2rem;
-        width: 15rem;
-        // background-color: red;
-        // box-shadow: 0px 0px 6px 4px rgba(230,196,196,0.7); 
-        border-style:outset;
-        margin-left: 26rem;
-        a{
-            text-decoration:none;
-            color: black;
-            font-size: bold;
-            font-family:sans-serif;
-            font-size:0.9rem;
-            
-            span{
-                position:relative;
-                top:-0.4rem;
+        #already-account{
+            height: 2rem;
+            width: 15rem;
+            // background-color: red;
+            // box-shadow: 0px 0px 6px 4px rgba(230,196,196,0.7); 
+            // border-style:outset;
+            margin-left: 1rem;
+            a{
+                text-decoration:none;
+                color:#3449eb;
+                
             }
-            
-            
         }
     }
-    #already-account{
-        height: 2rem;
-        width: 15rem;
-        // background-color: red;
-        // box-shadow: 0px 0px 6px 4px rgba(230,196,196,0.7); 
-        // border-style:outset;
-        margin-left: 26rem;
-        a{
-            text-decoration:none;
-            color:#3449eb;
-            
-        }
-    }
+
+
+
+
+  
+    
+}
 }
