--- a/assets/css/user_sign_in.css
+++ b/assets/css/user_sign_in.css
@@ -30,14 +30,16 @@ body {
       width: 15rem;
       padding: 0.8rem;
       font-size: 0.7rem;
-      font-family: sans-serif; }
+      font-family: sans-serif;
+      outline-color: black; }
     body #sign-in-page form input[type="submit"] {
       background-color: #4834c9;
       color: white;
       font-size: 1rem;
       outline: none;
       cursor: pointer;
-      border: none; }
+      border: none;
+      border-radius: 3%; }
     body #sign-in-page form #already-account {
       height: 2rem;
       width: 15rem;
