--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -7,6 +7,9 @@
         <a href="/users/profile/<%= user.id%>">
             <%= user.name %>
         </a>   
+        <a href="/">
+            Home
+         </a>
         <a href="/users/sign-out">
            Sign out
         </a>
