--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -2,10 +2,40 @@
 //     color:salmon;
 // }
 #home-container{
-    display: flex;
+    display:flex;
     #feed-posts{
-        width: 70%;
+       
+        width: 75%;
         padding: 10px;
+        #new-post-form{
+            display:flex;
+            flex-direction:column;
+            // margin-left: 17rem;
+            // display:inline-block;
+            textarea{
+                outline:none;
+                // display: inline-block;
+                height: 7rem;
+                width: 15rem;
+                font-size:1rem;
+                // box-shadow: 0px 0px 6px 4px rgba(230,196,196,0.7); 
+                border:0.5px dashed black;
+            }
+            input[type="submit"]{
+    
+                background-color: #4834c9;
+                // display: inline-block;
+               
+                width: 15rem;
+                padding: 0.45rem;
+                color:white;
+                font-size:1rem;
+                outline: none;
+                cursor: pointer;
+                border:none;
+                border-radius:3%;
+            }
+        }
 
     }
     #user-friends{
