--- a/assets/scss/user_sign_in.scss
+++ b/assets/scss/user_sign_in.scss
@@ -46,6 +46,7 @@ body{
             font-size: 0.7rem;
             // outline: blueviolet;
             font-family: sans-serif;
+            outline-color:black;
         
 
         }
@@ -58,6 +59,7 @@ body{
             outline: none;
             cursor: pointer;
             border:none;
+            border-radius:3%;
             
         }
         #already-account{
