--- a/assets/scss/user_sign_up.scss
+++ b/assets/scss/user_sign_up.scss
@@ -25,6 +25,7 @@ body{
             // box-shadow: 0px 0px 6px 4px rgba(230,196,196,0.7); 
             border-style:outset;
             margin-left: 1.5rem;
+            border-radius:3%;
             a{
                 text-decoration:none;
                 color: black;
@@ -51,6 +52,7 @@ body{
             font-size: 0.7rem;
             // outline: blueviolet;
             font-family: sans-serif;
+            outline-color:black;
         
 
         }
