--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -1,31 +1,48 @@
+<link rel="stylesheet" href="<%= assetPath('css/post.css') %>">
 <!-- it is a partial  -->
 <!--  the code for posts will be here -->
-<li id="post-<%= post._id %>">
+<li id="post-<%= post._id %>" class="post-code">
     <!-- here user is the field in post schema and 
     name is one of its property.  -->
     <!-- here post is the iterating variable -->
-    <p><%= post.user.name %></p>
+    <section class="full-post">
+    <p class="post-user-info"><%= post.user.name %></p>
    
-    <p><%= post.content %>
-    <small>
+    <p class="post-content"><%= post.content %>
+        <%  if( locals.user && locals.user.id == post.user.id){ %>
+            <a class="delete-post-button" href="/posts/destroy/<%= post._id %>">x</a>
+           
+            
+            <%  } %>
+    </p>
+    <small class="like-content">
     <% if(locals.user){ %>
-        <a class="toggle-like-button"  data-likes="<%= post.likes.length %>"  href="/likes/toggle/?id=<%= post._id %>&type=Post"><%= post.likes.length %> likes</a>
+        <a class="toggle-like-button"  data-likes="<%= post.likes.length %>"  href="/likes/toggle/?id=<%= post._id %>&type=Post">
+            <i class="fas fa-thumbs-up"></i>
+            <%= post.likes.length %> likes</a>
     <% }else{ %>
         <%= post.likes.length %> likes
     <% } %>
     </small>
+    </section>
         
        
 
     <!--checking if current logged in user id with the user id who created the post-->
-    <%  if( locals.user && locals.user.id == post.user.id){ %>
-    <a class="delete-post-button" href="/posts/destroy/<%= post._id %>">x</a>
-   
     
-    <%  } %>
-    </p>
+    
 
     <div class="post-comments">
+        
+        <div class="post-comments-list">
+            <ul id="post-comments-<%= post._id%>">
+                <!-- here 'post' in 'post.comment' is the iterating  varible in the above for loop-->
+                <% for( comment of post.comments) { %>
+                    <!-- using parials  here -->
+                    <%- include('_comment'); %>
+                <% } %>
+            </ul>
+        </div>
         
         <!-- if condition is added for authentication purpose -->
         <% if(locals.user){ %>
@@ -38,14 +55,6 @@
         </form>
 
         <% } %>
-        <div class="post-comments-list">
-            <ul id="post-comments-<%= post._id%>">
-                <!-- here 'post' in 'post.comment' is the iterating  varible in the above for loop-->
-                <% for( comment of post.comments) { %>
-                    <!-- using parials  here -->
-                    <%- include('_comment'); %>
-                <% } %>
-            </ul>
-        </div>
+        
     </div>
 </li>
