--- a/views/home.ejs
+++ b/views/home.ejs
@@ -42,7 +42,8 @@
  </section>
  <%- include('_chat_box'); %>
  </div>
-
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/svg-with-js.css"></script>
+ <script src="https://use.fontawesome.com/releases/v5.10.2/js/all.js" data-auto-replace-svg="nest"></script>
  <script src="<%= assetPath('js/home_comments.js') %>"></script>
 
 
