--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="<%= assetPath('css/layout.css') %>">
         <link rel="stylesheet" href="<%= assetPath('css/header.css') %>">
         <link rel="stylesheet" href="<%= assetPath('css/footer.css') %>">
+        <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
         <!-- extracting here the css part  of sub page -->
         <%- style %>
     
