--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -1,38 +1,38 @@
-.post-code {
+.post-container {
   border: 0.5px solid lightgray;
   list-style: none;
   margin-bottom: 0.5rem;
   border-radius: 0.2rem; }
-  .post-code .full-post {
+  .post-container .full-post {
     border: 0.5px solid lightgray; }
-    .post-code .full-post .post-user-info {
+    .post-container .full-post .post-user-info {
       font-family: arial;
       font-size: 0.8rem;
       color: #4834c9;
       font-weight: bold;
       display: flex;
       justify-content: space-between; }
-    .post-code .full-post .post-content {
+    .post-container .full-post .post-content {
       font-family: arial;
       display: flex;
       justify-content: space-between;
       font-size: 0.8rem; }
-    .post-code .full-post .like-content {
+    .post-container .full-post .post-like-content {
       display: flex;
       justify-content: space-between; }
-      .post-code .full-post .like-content a {
+      .post-container .full-post .post-like-content a {
         color: #909090;
         text-decoration: none; }
-  .post-code .post-comments form {
+  .post-container .post-comments form {
     margin-top: 0.5rem; }
-    .post-code .post-comments form input[type="text"] {
+    .post-container .post-comments form input[type="text"] {
       background-color: #F2F3F5;
       font-size: 0.8rem;
       border-radius: 30px 30px 30px 30px;
       width: 80%;
       padding: 0.4rem;
       outline: none; }
-    .post-code .post-comments form input[type="submit"] {
+    .post-container .post-comments form input[type="submit"] {
       background-color: #4834c9;
       color: white;
       font-size: 0.8rem;
