--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,10 +1,12 @@
 
 
 <link rel="stylesheet" href="<%= assetPath('css/user_profile.css') %>">
+<div class="profile-section">
 
       <!-- locals.user contains current logged in user  -->
      <!-- user is here accessible bcoz of user.locals.user=req.user -->
     <%  if(user.id==profile_user.id){  %>
+        
         <img src="<%= user.avatar %>" alt="<%= user.name %>" width="200" height="200">
          <!-- if user matches then show the form -->
         <form action="/users/update/<%= profile_user._id%>" enctype="multipart/form-data" method="POST">
@@ -14,9 +16,12 @@
             <input type="file" name="avatar" placeholder="Profile Picture">
             <input type="submit" value="Update">
         </form>
+        </div>
     <%  }else{ %>
+        <div class="profile-section">
         <!-- else show only the profile info -->
         <img src="<%= profile_user.avatar %>" alt="<%= profile_user.name %>" width="200" height="200">
         <h1> Name : <%= profile_user.name%></h1>
         <h1> Email : <%= profile_user.email%></h1>
     <% } %>
+    </div>
