--- a/assets/scss/chat_box.scss
+++ b/assets/scss/chat_box.scss
@@ -1,5 +1,19 @@
 // CHANGE :: add styling for the chat box
+.open-button {
+    background-color: #555;
+    color: white;
+    padding: 16px 20px;
+    border: none;
+    cursor: pointer;
+    opacity: 0.8;
+    position: fixed;
+    bottom: 15px;
+    right: 28px;
+    width: 280px;
+  }
+  
 #user-chat-box{
+    display: none;
     position:fixed;
     bottom:10px;
     right: 10px;
@@ -77,6 +91,27 @@
             font-family: sans-serif;
             
         }
-
     }
+
+    
+    .btn-cancel {     
+        display:block;  
+        color:black;
+        height:22px;
+        width:22px;
+        
+        cursor: pointer;
+        // margin-right:5rem;
+        // margin-bottom:7rem;
+        position:fixed;
+        right:320px;
+        bottom:368px;
+        i{
+            font-size:1rem;
+        }
+    }       
+        
+      
+    
+
 }
