--- a/views/_chat_box.ejs
+++ b/views/_chat_box.ejs
@@ -1,6 +1,10 @@
 <!-- Create the code for chatbox -->
+
 <% if(locals.user){ %>
+    <button class="btn open-button">Chat</button>
+    
     <div id="user-chat-box">
+            
         <div id="feedback"></div>
         <ul id="chat-messages-list">
             <li class="other-message">
@@ -14,11 +18,16 @@
                 
             </li>
         </ul>
+        
         <div id="chat-message-input-container">
             <input id="chat-message-input" placeholder="type your msg here...">
             <button id="send-message">Send</button>
+            
 
         </div>
+        <div  class="btn btn-cancel" ><i class="fas fa-window-close"></i></div>
+        
+        
 
     </div>
 
